--- a/src/app/modules/reports/rel-services/rel-services.component.html
+++ b/src/app/modules/reports/rel-services/rel-services.component.html
@@ -1,1 +1,99 @@
-<span>Relatório de Serviços realizados</span>
+<div *ngIf="loading" class="loading">
+    <img src="assets/icons/loadingapp.svg" alt="Carregando...">
+</div>
+
+<div *ngIf="!loading" class="absolute inset-0 flex flex-col min-w-0 overflow-hidden">
+    <!-- Header -->
+    <div class="
+            flex flex-col
+            sm:flex-row
+            flex-0
+            sm:items-center sm:justify-between
+            p-6
+            sm:py-8 sm:px-10
+            border-b
+            bg-card
+            dark:bg-transparent
+        ">
+        <div class="flex-1 min-w-0">
+            <!-- Breadcrumbs -->
+            <div>
+                <div class="hidden sm:flex flex-wrap items-center font-medium">
+                    <div>
+                        <a class="whitespace-nowrap text-primary-500">Relatórios</a>
+                    </div>
+                    <div class="flex items-center ml-1 whitespace-nowrap">
+                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-right'">
+                        </mat-icon>
+                        <span class="ml-1 text-secondary">Rel. Serviços Realizados</span>
+                    </div>
+                </div>
+                <div class="flex sm:hidden">
+                    <a class="
+                            inline-flex
+                            items-center
+                            -ml-1.5
+                            text-secondary
+                            font-medium
+                        ">
+                        <mat-icon class="icon-size-5 text-secondary" [svgIcon]="'heroicons_solid:chevron-left'">
+                        </mat-icon>
+                        <span class="ml-1">Back</span>
+                    </a>
+                </div>
+            </div>
+            <!-- Title -->
+            <div class="mt-2">
+                <h2 class="
+                        text-3xl
+                        md:text-4xl
+                        font-extrabold
+                        tracking-tight
+                        leading-7
+                        sm:leading-10
+                        truncate
+                    ">
+                    Relatório de Serviços Realizados
+                </h2>
+            </div>
+        </div>
+        <!-- Actions -->
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
+            <button class="ml-3" [color]="'accent'" mat-flat-button (click)="search()"
+                matTooltip="Cliquei para efetuar a pesquisa">
+                <mat-icon class="icon-size-5 mr-2">search</mat-icon>
+                Pesquisar
+            </button>
+            <button class="ml-1" mat-flat-button [color]="'accent'" (click)="openFilter()" matTooltip="Filtro avançado">
+                <mat-icon class="icon-size-5 mr-2">filter_alt</mat-icon>
+            </button>
+        </div>
+    </div>
+
+    <div class="flex-auto content p-6 sm:p-10 overflow-y-auto" cdkScrollable
+        [ngClass]="{ hidden: dataSource.length == 0 }">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 content-table">
+            <ng-container matColumnDef="servico">
+                <th mat-header-cell *matHeaderCellDef>SERVIÇO</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.servico }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="totalClientes">
+                <th mat-header-cell *matHeaderCellDef>TOTAL DE CLIENTES</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.totalClientes }}
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="total">
+                <th mat-header-cell *matHeaderCellDef>TOTAL RECEBIDO</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.total }}
+                </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+    </div>
+
+</div>
