--- a/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
+++ b/src/app/modules/operations/cutsMade/list/cutsMade-list.component.html
@@ -99,6 +99,12 @@
                     {{ element.hora }}
                 </td>
             </ng-container>
+            <ng-container matColumnDef="valor">
+                <th mat-header-cell *matHeaderCellDef>Valor</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ getElement('valor', element.valor) }}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="confirmado">
                 <th mat-header-cell *matHeaderCellDef>Confirmado</th>
                 <td mat-cell *matCellDef="let element">
@@ -125,11 +131,9 @@
                             <mat-icon>cancel</mat-icon>
                             <span>Cancelar</span>
                         </button>
-                    </mat-menu>
-                    <mat-menu #actionsMenu="matMenu" yPosition="below" xPosition="before">
-                        <button mat-menu-item (click)="cancelRow(element)">
-                            <mat-icon>confirm</mat-icon>
-                            <span>Gerar comprovante</span>
+                        <button mat-menu-item (click)="print(element)">
+                            <mat-icon>print</mat-icon>
+                            <span>Imprimir</span>
                         </button>
                     </mat-menu>
                 </mat-cell>
