--- a/src/app/modules/operations/schedule/list/schedule-list.component.html
+++ b/src/app/modules/operations/schedule/list/schedule-list.component.html
@@ -63,7 +63,7 @@
                 <mat-icon class="icon-size-5 mr-2" [svgIcon]="'heroicons_solid:pencil-alt'"></mat-icon>
                 Novo
             </button>
-            <button class="ml-3" mat-flat-button [color]="'accent'" (click)="newForm()">
+            <button class="ml-3" mat-flat-button [color]="'accent'" (click)="gerar()">
                 <mat-icon class="icon-size-5 mr-2" [svgIcon]="'heroicons_solid:pencil-alt'"></mat-icon>
                 Gerar planilha
             </button>
