--- a/src/app/modules/auth/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/sign-in/sign-in.component.html
@@ -1,16 +1,18 @@
 <div class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0">
-    <div class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
-        <svg class="absolute inset-0 pointer-events-none"
-             viewBox="0 0 960 540" width="100%" height="100%" preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
+    <div
+        class="relative hidden md:flex flex-auto items-center justify-center w-1/2 h-full p-16 lg:px-28 overflow-hidden bg-gray-800 dark:border-l">
+        <svg class="absolute inset-0 pointer-events-none" viewBox="0 0 960 540" width="100%" height="100%"
+            preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
             <g class="text-gray-700 opacity-25" fill="none" stroke="currentColor" stroke-width="100">
                 <circle r="234" cx="196" cy="23"></circle>
                 <circle r="234" cx="790" cy="491"></circle>
             </g>
         </svg>
-        <svg class="absolute -top-16 -right-16 text-gray-700"
-             viewBox="0 0 220 192" width="220" height="192" fill="none">
+        <svg class="absolute -top-16 -right-16 text-gray-700" viewBox="0 0 220 192" width="220" height="192"
+            fill="none">
             <defs>
-                <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+                <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20"
+                    patternUnits="userSpaceOnUse">
                     <rect x="0" y="0" width="4" height="4" fill="currentColor"></rect>
                 </pattern>
             </defs>
@@ -26,7 +28,8 @@
             </div>
         </div>
     </div>
-    <div class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
+    <div
+        class="md:flex md:items-center md:justify-end w-full sm:w-auto md:h-full md:w-1/2 py-8 px-4 sm:p-12 md:p-16 sm:rounded-2xl md:rounded-none sm:shadow md:shadow-none sm:bg-card">
         <div class="w-full max-w-180 sm:w-180 mx-auto sm:mx-0">
             <!-- Logo -->
             <div class="w-28">
@@ -37,37 +40,23 @@
             <div class="mt-8 text-4xl font-extrabold tracking-tight leading-tight">Acessar agora</div>
             <div class="flex items-baseline mt-0.5 font-medium">
                 <div>Não possui conta?</div>
-                <a
-                    class="ml-1 hover:underline"
-                    style="color: #FF941A;"
-                    [routerLink]="['/sign-up']">CADASTRE-SE
+                <a class="ml-1 hover:underline" style="color: #FF941A;" [routerLink]="['/sign-up']">CADASTRE-SE
                 </a>
             </div>
 
             <!-- Alert -->
-            <fuse-alert
-                class="mt-8 -mb-4"
-                *ngIf="showAlert"
-                [appearance]="'outline'"
-                [showIcon]="false"
-                [type]="alert.type"
-                [@shake]="alert.type === 'error'">
+            <fuse-alert class="mt-8 -mb-4" *ngIf="showAlert" [appearance]="'outline'" [showIcon]="false"
+                [type]="alert.type" [@shake]="alert.type === 'error'">
                 {{alert.message}}
             </fuse-alert>
 
             <!-- Sign in form -->
-            <form
-                class="mt-8"
-                [formGroup]="signInForm"
-                #signInNgForm="ngForm">
+            <form class="mt-8" [formGroup]="signInForm" #signInNgForm="ngForm">
 
                 <!-- Email field -->
                 <mat-form-field class="w-full">
                     <mat-label>Email</mat-label>
-                    <input
-                        id="email"
-                        matInput
-                        [formControlName]="'email'">
+                    <input id="email" matInput [formControlName]="'email'">
                     <mat-error *ngIf="signInForm.get('email').hasError('required')">
                         Campo obrigatório
                     </mat-error>
@@ -79,24 +68,13 @@
                 <!-- Password field -->
                 <mat-form-field class="w-full">
                     <mat-label>Senha</mat-label>
-                    <input
-                        id="senha"
-                        matInput
-                        type="password"
-                        [formControlName]="'senha'"
-                        #senhaField>
-                    <button
-                        mat-icon-button
-                        type="button"
+                    <input id="senha" matInput type="password" [formControlName]="'senha'" #senhaField>
+                    <button mat-icon-button type="button"
                         (click)="senhaField.type === 'password' ? senhaField.type = 'text' : senhaField.type = 'password'"
                         matSuffix>
-                        <mat-icon
-                            class="icon-size-5"
-                            *ngIf="senhaField.type === 'password'"
+                        <mat-icon class="icon-size-5" *ngIf="senhaField.type === 'password'"
                             [svgIcon]="'heroicons_solid:eye'"></mat-icon>
-                        <mat-icon
-                            class="icon-size-5"
-                            *ngIf="senhaField.type === 'text'"
+                        <mat-icon class="icon-size-5" *ngIf="senhaField.type === 'text'"
                             [svgIcon]="'heroicons_solid:eye-off'"></mat-icon>
                     </button>
                     <mat-error *ngIf="signInForm.get('senha').hasError('required')">
@@ -106,27 +84,19 @@
 
                 <!-- Actions -->
                 <div class="inline-flex items-end justify-between w-full mt-1.5">
-                    <a
-                    style="text-decoration: underline; cursor: pointer;"
-                        class="text-md font-medium hover:underline"
+                    <a style="text-decoration: underline; cursor: pointer;" class="text-md font-medium hover:underline"
                         [routerLink]="['/forgot-password']">Esqueci minha senha
                     </a>
                 </div>
 
                 <!-- Submit button -->
-                <button
-                    class="fuse-mat-button-large w-full mt-6"
-                    style="background-color: #FF941A;"
-                    mat-flat-button
-                    [disabled]="signInForm.disabled"
-                    (click)="signIn()">
+                <button class="fuse-mat-button-large w-full mt-6" style="background-color: #FF941A;" mat-flat-button
+                    [disabled]="signInForm.disabled" (click)="signIn()">
                     <span *ngIf="!signInForm.disabled" style="color: #FFF; font-weight: bold;">
                         Entrar
                     </span>
-                    <mat-progress-spinner
-                        *ngIf="signInForm.disabled"
-                        [diameter]="24"
-                        [mode]="'indeterminate'"></mat-progress-spinner>
+                    <mat-progress-spinner *ngIf="signInForm.disabled" [diameter]="24" [mode]="'indeterminate'">
+                    </mat-progress-spinner>
                 </button>
 
                 <!-- Separator -->
@@ -138,22 +108,9 @@
 
                 <!-- Single sign-on buttons -->
                 <div class="flex items-center mt-8 space-x-4">
-                    <button
-                        class="flex-auto"
-                        type="button"
-                        mat-stroked-button>
+                    <button class="flex-auto" type="button" mat-stroked-button (click)="authenticate()">
                         <div class="w-8">
-                            <img src="assets/icons/facebook.svg"  />
-                        </div>
-                    </button>
-                    <button
-                        class="flex-auto"
-                        type="button"
-                        mat-stroked-button
-                        (click)="authenticate()"
-                        >
-                        <div class="w-8">
-                            <img src="assets/icons/google.svg"  />
+                            <img src="assets/icons/google.svg" />
                         </div>
                     </button>
                 </div>
