--- a/src/app/modules/authentication/user/list/user-list.component.html
+++ b/src/app/modules/authentication/user/list/user-list.component.html
@@ -111,7 +111,7 @@
                 <ng-container matColumnDef="profile">
                     <th mat-header-cell *matHeaderCellDef>Perfil</th>
                     <td mat-cell *matCellDef="let element">
-                        {{ element.profile.descricao.toUpperCase() }}
+                        {{ element.profile?.descricao.toUpperCase() }}
                     </td>
                 </ng-container>
 
