--- a/src/app/modules/operations/service/form/service-form.component.html
+++ b/src/app/modules/operations/service/form/service-form.component.html
@@ -23,7 +23,7 @@
                 <div class="hidden sm:flex flex-wrap items-center font-medium">
                     <div>
                         <a class="whitespace-nowrap text-primary-500"
-                            >Autenticação</a
+                            >Operações</a
                         >
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
@@ -31,7 +31,7 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Cliente</span>
+                        <span class="ml-1 text-secondary">Serviço</span>
                     </div>
                     <div class="flex items-center ml-1 whitespace-nowrap">
                         <mat-icon
@@ -72,7 +72,7 @@
                         truncate
                     "
                 >
-                    Formulario de Perfis
+                    Formulario de Serviços
                 </h2>
             </div>
         </div>
